2010-07-11
    * Fixed bug in class SequencerInputThread: realtime priority must be applied 
      in run() instead of start() to avoid changing the scheduling policy of the
      parent. This is a problem when running FluidSynth in systems affected by a  
      glib-2.22 bug that has not yet been fixed.
      Reference: https://bugzilla.gnome.org/show_bug.cgi?id=599079  

2010-07-07
    * smfplayer renamed as guiplayer, with a new windows layout and
      supporting Cakewalk WRK files playback
    * release 0.4.0
    
2010-07-03
    * subdirectory "tests" renamed as "utils".
    * visibility attribute for public classes.
    
2010-06-10
    * Compile fix for 0.3.2
    * release 0.3.2a

2010-06-09
    * Command line arguments for all the utilities/test programs.

2010-05-28
    * fix a crash in drumstick-sysinfo when a timer module is not loaded. 
    
2010-05-13
    * Man pages for the utilities/test programs.

2010-05-10
    * New test program: DrumGrid

2010-04-19
    * Release 0.3.1
    * Allow to build drumstick-file library under Windows
    * New method MidiClient::parseAddress() replacing the ALSA function 
      snd_seq_parse_address() in MidiPort::subscribeTo() and similar methods.
    * Fixed MidiClient::getAvailableInputs() and getAvailableOutputs() forcing 
      to always retrieve the clients list.

2010-03-09
    * Release 0.3.0
    * API changes:
      SequencerEvent::isChannel() returns true for SND_SEQ_EVENT_NOTE 
      QueueTimer::setId(const TimerId& id) new method overload
      Timer::bestGlobalTimerId() new static function
      getRuntimeALSALibraryVersion() new global function
      getRuntimeALSALibraryNumber() new global function
      getRuntimeALSADriverVersion() new global function
      getRuntimeALSADriverNumber() new global function
    
2010-03-02
    * New class QWrk, for reading Cakewalk files

2010-02-17
    * Split: drumstick-file and drumstick-alsa 

2010-01-07