@@ -1,1 +1,1 @@
-VERSION = 0.4.0
+VERSION = 0.4.1
