@@ -6,10 +6,6 @@ ADD_EXECUTABLE(drumstick-sysinfo
     ${sysinfo_SRCS}
 )
 
-IF(USE_PCH)
-    ADD_DEPENDENCIES(drumstick-sysinfo precompiled_headers)
-ENDIF(USE_PCH)
-
 TARGET_LINK_LIBRARIES(drumstick-sysinfo
     ${QT_LIBRARIES} 
     ${ALSA_LIBS} 
